# rust_solutions

./: README.md
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/: cli.rs
cutr/: Cargo.toml
cutr/src/: lib.rs
cutr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml  cp-tests.sh
findr/src/: lib.rs
findr/tests/expected/: type_f_path_a_b_d.txt  type_f_path_d.txt
grepr/: Cargo.toml
grepr/src/: lib.rs
grepr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs
headr/tests/: cli.rs
headr/tests/expected/: all.c10000.out
hello/: Cargo.toml
uniqr/: Cargo.toml
uniqr/src/: lib.rs
uniqr/tests/: cli.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
wcr/tests/: cli.rs
