[package]
name = "cutr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
csv = "1.3.0"
regex = "1.10.4"

[dev-dependencies]
anyhow = "1.0.82"
assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
