[package]
name = "grepr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
regex = "1.10.4"
sys-info = "0.9.1"
walkdir = "2.5.0"

[dev-dependencies]
anyhow = "1.0.83"
assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
